Change the color of the footer's background color and change the footer's logo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <ol>
         <li>
           <img src="./images/search-doctor-min.svg"
-          width="91.98" 
+          width="92" 
           height="90"
           srcset="./images/search-doctor-min.svg 1x, ./images/search-doctor@2x-min.svg 2x"
           alt="searching doctor">
@@ -84,7 +84,7 @@
         </li>
         <li>
           <img src="./images/online-pharmacy-min.svg"
-          width="61.86" 
+          width="62" 
           height="85"
           srcset="./images/online-pharmacy-min.svg 1x, ./images/online-pharmacy@2x-min.svg 2x"
           alt="searching doctor">
@@ -97,7 +97,7 @@
         </li>
         <li>
           <img src="./images/consultation-min.svg"
-          width="67.29" 
+          width="67" 
           height="95"
           srcset="./images/consultation-min.svg 1x, ./images/consultation@2x-min.svg 2x"
           alt="searching doctor">
@@ -110,7 +110,7 @@
         </li>
         <li>
           <img src="./images/details-info-min.svg"
-          width="67.08" 
+          width="67" 
           height="95"
           srcset="./images/details-info-min.svg 1x, ./images/details-info@2x-min.svg 2x"
           alt="searching doctor">
@@ -124,7 +124,7 @@
         <li>
           <img src="./images/emergency-care-min.svg"
           width="80" 
-          height="71.15"
+          height="71"
           srcset="./images/emergency-care-min.svg 1x, ./images/emergency-care@2x-min.svg 2x"
           alt="searching doctor">
           <strong>
@@ -137,7 +137,7 @@
         </li>
         <li>
           <img src="./images/tracking-min.svg"
-          width="69.42" 
+          width="69" 
           height="95"
           srcset="./images/tracking-min.svg 1x, ./images/tracking@2x-min.svg 2x"
           alt="searching doctor">
@@ -157,7 +157,7 @@
         <img src="./images/healthcare.png"
         width="650"
         height="477"
-        srcset="./images/healthcare.png 1x, ./images/healthcare@2x.png"
+        srcset="./images/healthcare.png 1x, ./images/healthcare@2x.png 2x"
         alt="healthcare">
         <div>
           <h2>
@@ -192,7 +192,7 @@
     </section>
     <hr>
     <article>
-      <h2>
+      <h2 style="color: #fff;">
         What our customer are saying
       </h2>
       <div>
@@ -202,14 +202,14 @@
           height="141"
           srcset="./images/customer-img.png 1x, ./images/customer-img@2x.png 2x"
           alt="the pic of our customer">
-          <h3>
+          <h3 style="color: #fff;">
             Edward Newgate
           </h3>
-          <p>
+          <p style="color: #fff;">
             Founder Circle
           </p>
         </div>
-        <p>
+        <p style="color: #fff;">
           “Our dedicated patient engagement app and 
           web portal allow you to access information instantaneously (no tedeous form, long calls, 
           or administrative hassle) and securely”
@@ -237,7 +237,7 @@ up in the laboratory
 a disease detection...
           </p>
           <a href="#">Read more <img src="./images/right-arrow-min.svg"
-            width="14.14"
+            width="14"
             height="9"
             srcset="./images/right-arrow-min.svg 1x, ./images/right-arrow@2x-min.svg 2x"
             alt="arrow"></a>
@@ -256,7 +256,7 @@ safe for consumption
             Herbal medicine is very widely used at this time because of its very good for your health...
           </p>
           <a href="#">Read more <img src="./images/right-arrow-min.svg"
-            width="14.14"
+            width="14"
             height="9"
             srcset="./images/right-arrow-min.svg 1x, ./images/right-arrow@2x-min.svg 2x"
             alt="arrow"></a>
@@ -276,7 +276,7 @@ facial skin
 There are some...
           </p>
           <a href="#">Read more <img src="./images/right-arrow-min.svg"
-            width="14.14"
+            width="14"
             height="9"
             srcset="./images/right-arrow-min.svg 1x, ./images/right-arrow@2x-min.svg 2x"
             alt="arrow"></a>
@@ -289,10 +289,9 @@ There are some...
   <footer>
     <div>
       <div>
-        <a href="/"><img src="./images/logo-min.svg" 
+        <a href="/"><img src="./images/footer-logo.svg" 
           width="160"
           height="41"
-          srcset="./images/logo-min.svg 1x, ./images/logo@2x-min.svg 2x"
           alt="logo">
         </a>
         <p style="color: #fff;">
